@@ -77,6 +77,7 @@ x2goclient (4.0.5.1-0x2go1) UNRELEASED; urgency=low
     - macbuild.sh: define PulseAudio libraries and binaries to be later
       copied. Discover them using MACPORTS_PREFIX. Error out if any component
       was not found.
+    - macbuild.sh: copy PulseAudio libraries and binaries.
 
   [ Oleksandr Shneyder ]
   * New upstream release (4.0.5.1):
